--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <div class="header-search-container">
 
-          <input type="search" name="search" class="search-field" placeholder="Enter your nfluencer name...">
+          <input type="search" name="search" class="search-field" placeholder="Enter influencer name...">
 
           <button class="search-btn">
             <ion-icon name="search-outline"></ion-icon>
